# edc_2024_E

./: CMakeLists.txt  README.md  chess_slover.cpp
include/: board.hpp  inference.h  packet.hpp  serial_driver.hpp
